--- a/bsp/stm32/stm32f103-atn-chkgv2/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/bsp/stm32/stm32f103-atn-chkgv2/board/CubeMX_Config/CubeMX_Config.ioc
@@ -12,21 +12,24 @@ Mcu.IP1=RCC
 Mcu.IP2=RTC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP5=TIM3
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA4
 Mcu.Pin1=PA5
+Mcu.Pin10=VP_RTC_VS_RTC_Activate
+Mcu.Pin11=VP_SYS_VS_Systick
 Mcu.Pin2=PA6
 Mcu.Pin3=PA7
 Mcu.Pin4=PA9
 Mcu.Pin5=PA10
 Mcu.Pin6=PA13
 Mcu.Pin7=PA14
-Mcu.Pin8=VP_RTC_VS_RTC_Activate
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin8=PB4
+Mcu.Pin9=PB8
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
@@ -61,6 +64,19 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB4.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed
+PB4.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
+PB4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
+PB8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB8.GPIO_Label=FAN_PWREN
+PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB8.GPIO_PuPd=GPIO_PULLUP
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB8.Locked=true
+PB8.PinState=GPIO_PIN_SET
+PB8.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -92,7 +108,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=16000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=32000000
@@ -116,11 +132,15 @@ RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=32000000
 RCC.USBFreq_Value=64000000
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
 SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
