--- a/bsp/stm32/stm32f103-atn-chkgv2/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/bsp/stm32/stm32f103-atn-chkgv2/board/CubeMX_Config/CubeMX_Config.ioc
@@ -14,22 +14,27 @@ Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM3
 Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA4
 Mcu.Pin1=PA5
-Mcu.Pin10=VP_RTC_VS_RTC_Activate
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB4
+Mcu.Pin13=PB8
+Mcu.Pin14=VP_RTC_VS_RTC_Activate
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PA6
 Mcu.Pin3=PA7
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=PB4
-Mcu.Pin9=PB8
-Mcu.PinsNb=12
+Mcu.Pin4=PB10
+Mcu.Pin5=PB11
+Mcu.Pin6=PC7
+Mcu.Pin7=PC8
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
@@ -64,6 +69,10 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB4.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed
 PB4.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
 PB4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -77,6 +86,17 @@ PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB8.Locked=true
 PB8.PinState=GPIO_PIN_SET
 PB8.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC7.GPIO_Label=CAT1_PWRKEY
+PC7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PC7.GPIO_PuPd=GPIO_NOPULL
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC8.GPIO_Label=CAT1_PWREN
+PC8.GPIO_PuPd=GPIO_PULLUP
+PC8.Locked=true
+PC8.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -143,6 +163,8 @@ TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
