--- a/bsp/stm32/stm32f103-atn-chkgv2/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/bsp/stm32/stm32f103-atn-chkgv2/board/CubeMX_Config/CubeMX_Config.ioc
@@ -88,8 +88,8 @@ PB8.PinState=GPIO_PIN_SET
 PB8.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PC7.GPIO_Label=CAT1_PWRKEY
-PC7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PC7.GPIO_PuPd=GPIO_NOPULL
+PC7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC7.GPIO_PuPd=GPIO_PULLUP
 PC7.Locked=true
 PC7.Signal=GPIO_Output
 PC8.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -128,7 +128,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADCFreqValue=16000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=32000000
