--- a/bsp/stm32/stm32f103-atn-chkgv2/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/bsp/stm32/stm32f103-atn-chkgv2/board/CubeMX_Config/CubeMX_Config.ioc
@@ -18,23 +18,27 @@ Mcu.IP7=USART3
 Mcu.IPNb=8
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA4
-Mcu.Pin1=PA5
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB4
-Mcu.Pin13=PB8
-Mcu.Pin14=VP_RTC_VS_RTC_Activate
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin2=PA6
-Mcu.Pin3=PA7
-Mcu.Pin4=PB10
-Mcu.Pin5=PB11
-Mcu.Pin6=PC7
-Mcu.Pin7=PC8
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=16
+Mcu.Pin0=PC0
+Mcu.Pin1=PC1
+Mcu.Pin10=PC7
+Mcu.Pin11=PC8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB4
+Mcu.Pin17=PB8
+Mcu.Pin18=VP_RTC_VS_RTC_Activate
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PC2
+Mcu.Pin3=PA1
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
@@ -51,6 +55,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA1.GPIO_Label=LEDTB_EN
+PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
@@ -81,11 +90,25 @@ PB4.Signal=S_TIM3_CH1
 PB8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB8.GPIO_Label=FAN_PWREN
 PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PB8.GPIO_PuPd=GPIO_PULLUP
-PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB8.GPIO_PuPd=GPIO_PULLDOWN
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB8.Locked=true
-PB8.PinState=GPIO_PIN_SET
+PB8.PinState=GPIO_PIN_RESET
 PB8.Signal=GPIO_Output
+PC0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC0.GPIO_Label=LEDM1
+PC0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC0.GPIO_PuPd=GPIO_NOPULL
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=LEDM2
+PC1.Locked=true
+PC1.Signal=GPIO_Output
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=LEDM3
+PC2.Locked=true
+PC2.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PC7.GPIO_Label=CAT1_PWRKEY
 PC7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
