--- a/bsp/stm32/stm32f103-atn-chkgv2/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/bsp/stm32/stm32f103-atn-chkgv2/board/CubeMX_Config/CubeMX_Config.ioc
@@ -13,9 +13,10 @@ Mcu.IP2=RTC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM3
-Mcu.IP6=USART1
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP6=UART5
+Mcu.IP7=USART1
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
@@ -26,11 +27,13 @@ Mcu.Pin12=PA9
 Mcu.Pin13=PA10
 Mcu.Pin14=PA13
 Mcu.Pin15=PA14
-Mcu.Pin16=PB4
-Mcu.Pin17=PB8
-Mcu.Pin18=VP_RTC_VS_RTC_Activate
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin16=PC12
+Mcu.Pin17=PD2
+Mcu.Pin18=PB4
+Mcu.Pin19=PB8
 Mcu.Pin2=PC2
+Mcu.Pin20=VP_RTC_VS_RTC_Activate
+Mcu.Pin21=VP_SYS_VS_Systick
 Mcu.Pin3=PA1
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -38,7 +41,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB10
 Mcu.Pin9=PB11
-Mcu.PinsNb=20
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
@@ -105,6 +108,8 @@ PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=LEDM2
 PC1.Locked=true
 PC1.Signal=GPIO_Output
+PC12.Mode=Asynchronous
+PC12.Signal=UART5_TX
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=LEDM3
 PC2.Locked=true
@@ -120,6 +125,8 @@ PC8.GPIO_Label=CAT1_PWREN
 PC8.GPIO_PuPd=GPIO_PULLUP
 PC8.Locked=true
 PC8.Signal=GPIO_Output
+PD2.Mode=Asynchronous
+PD2.Signal=UART5_RX
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -184,6 +191,8 @@ SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1
+UART5.IPParameters=VirtualMode
+UART5.VirtualMode=Asynchronous
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
